logs/collective.mcp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/mcp'...
Listing './lib/python3.5/site-packages/collective/mcp/browser'...
Listing './lib/python3.5/site-packages/collective/mcp/browser/templates'...
Listing './lib/python3.5/site-packages/collective/mcp/doc'...
Listing './lib/python3.5/site-packages/collective/mcp/locales'...
Listing './lib/python3.5/site-packages/collective/mcp/locales/fr'...
Listing './lib/python3.5/site-packages/collective/mcp/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/mcp/locales/nl'...
Listing './lib/python3.5/site-packages/collective/mcp/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/mcp/profiles'...
Listing './lib/python3.5/site-packages/collective/mcp/profiles/default'...
Listing './lib/python3.5/site-packages/collective/mcp/samples'...
Listing './lib/python3.5/site-packages/collective/mcp/skins'...
Listing './lib/python3.5/site-packages/collective/mcp/skins/collective_mcp'...
Listing './lib/python3.5/site-packages/collective/mcp/tests'...
Compiling './lib/python3.5/site-packages/collective/mcp/tests/test_docs.py'...
***   File "./lib/python3.5/site-packages/collective/mcp/tests/test_docs.py", line 69
    print info[1]
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/collective/mcp/tests/utils.py'...
***   File "./lib/python3.5/site-packages/collective/mcp/tests/utils.py", line 53
    print 'Home page'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/collective/multimodeview'...
Listing './lib/python3.5/site-packages/collective/multimodeview/browser'...
Listing './lib/python3.5/site-packages/collective/multimodeview/browser/templates'...
Listing './lib/python3.5/site-packages/collective/multimodeview/locales'...
Listing './lib/python3.5/site-packages/collective/multimodeview/locales/en'...
Listing './lib/python3.5/site-packages/collective/multimodeview/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/multimodeview/locales/fr'...
Listing './lib/python3.5/site-packages/collective/multimodeview/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/multimodeview/locales/nl'...
Listing './lib/python3.5/site-packages/collective/multimodeview/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/multimodeview/samples'...
Listing './lib/python3.5/site-packages/collective.mcp-0.5.egg-info'...
Listing './lib/python3.5/site-packages/collective.multimodeview-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
